--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 @import "../vendor/bootstrap/dist/css/bootstrap.min.css";
 
 body {
-    background-color: #faf9f4;
+    background-color: #E6E2D7;
 }
 
 select:invalid {
