--- a/templates/agent_ticket/edit.html.twig
+++ b/templates/agent_ticket/edit.html.twig
@@ -21,14 +21,19 @@
             
                 <div class="row mb-3">
 
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <label class="form-label fw-bold">Auteur :</label>
                         <p>{{ ticket.auteur }}</p>                    
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <label class="form-label fw-bold">Catégorie :</label>
                         <p>{{ ticket.categorie }}</p>                    
+                    </div>
+
+                    <div class="col-md-4">
+                        <label class="form-label fw-bold">Responsable :</label>
+                        <p>{{ ticket.responsable }}</p>                    
                     </div>
 
                 </div>
