--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,7 +31,7 @@
                 {{ form_row(form.description) }}
             </div>
 
-            <button type="submit" class="btn btn-secondary">Envoyer</button>
+            <button type="submit" class="btn btn-secondary"><i class="bi bi-send"></i> Envoyer</button>
 
         {{ form_end(form) }}
 
@@ -39,7 +39,7 @@
 
     {# Bouton de connexion #}
     <div class="mt-4">
-        <a href="{{ path('app_login') }}" class="btn btn-primary">Connexion</a>
+        <a href="{{ path('app_login') }}" class="btn btn-primary"><i class="bi bi-person"></i> Connexion</a>
     </div>
 
 </div>
