--- a/templates/admin/ticket/edit.html.twig
+++ b/templates/admin/ticket/edit.html.twig
@@ -9,7 +9,7 @@
     <h1 class="mb-4">Modifier le ticket #{{ ticket.id }}</h1>
 
     <a href="{{ path('admin_ticket_index') }}" class="btn btn-secondary mb-3">
-        ← Retour à la liste
+        <i class="bi bi-chevron-left me-1"></i> Retour à la liste
     </a>
 
     <div class="card shadow-sm p-4">
@@ -86,7 +86,7 @@
                     {{ form_row(form.responsable) }}
                 </div>
 
-                <button class="btn btn-primary">Enregistrer</button>
+                <button class="btn btn-primary"><i class="bi bi-save"></i> Enregistrer</button>
 
             {{ form_end(form) }}
         
