--- a/templates/agent_ticket/edit.html.twig
+++ b/templates/agent_ticket/edit.html.twig
@@ -12,7 +12,7 @@
         {% include 'partials/_flash.html.twig' %}
 
         <a href="{{ path('agent_ticket_index') }}" class="btn btn-secondary btn-sm mb-3">
-            ← Retour à la liste
+            <i class="bi bi-chevron-left me-1"></i> Retour à la liste
         </a>
 
         <div class="card shadow-sm p-4">
@@ -84,7 +84,7 @@
                         {{ form_row(form.statut) }}
                     </div>
 
-                    <button class="btn btn-primary">Enregistrer</button>
+                    <button class="btn btn-primary"><i class="bi bi-save"></i> Enregistrer</button>
 
                 {{ form_end(form) }}
             
