--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
         {% block stylesheets %}
         {% endblock %}
 
@@ -21,7 +23,7 @@
                 </span>
                 <form action="{{ path('app_logout') }}" method="post" class="m-0">
                     <button class="btn btn-danger btn-sm">
-                        Déconnexion
+                        <i class="bi bi-box-arrow-right"></i> Déconnexion
                     </button>
                 </form>
             </nav>
@@ -29,9 +31,6 @@
         {% endif %}
 
         {% block body %}{% endblock %}
-
-        {# Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum 
-        sequi esse itaque ut rerum laboriosam eaque tempora ipsa, voluptatem aut 
-        alias voluptate eos cumque est quae nemo autem tempore? Dolore? #}
+        
     </body>
 </html>
